@@ -1,10 +1,11 @@
-package io.vertx.spi.cluster.redis.impl;
+package io.vertx.spi.cluster.redis.impl.codec;
 
 import io.netty.buffer.ByteBuf;
 import io.netty.buffer.ByteBufAllocator;
 import io.vertx.core.buffer.Buffer;
 import io.vertx.core.shareddata.impl.ClusterSerializable;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.nio.charset.StandardCharsets;
 import org.redisson.client.codec.BaseCodec;
 import org.redisson.client.codec.Codec;
@@ -16,24 +17,29 @@ public class ClusterSerializableCodec extends BaseCodec {
 
   public static final Codec INSTANCE = new ClusterSerializableCodec();
 
-  final Decoder<Object> decoder =
+  private final Decoder<Object> decoder =
       (buf, state) -> {
         int classNameLength = buf.readInt();
         String className = buf.readCharSequence(classNameLength, StandardCharsets.UTF_8).toString();
         try {
-          Object object = getClassLoader().loadClass(className).newInstance();
+          Object object =
+              getClassLoader().loadClass(className).getDeclaredConstructor().newInstance();
           if (!(object instanceof ClusterSerializable)) {
             throw new IOException(
                 className + " does not implement " + ClusterSerializable.class.getName());
           }
           ((ClusterSerializable) object).readFromBuffer(buf.readerIndex(), Buffer.buffer(buf));
           return object;
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+        } catch (InstantiationException
+            | IllegalAccessException
+            | ClassNotFoundException
+            | NoSuchMethodException
+            | InvocationTargetException e) {
           throw new IOException("Failed to decode class " + className, e);
         }
       };
 
-  final Encoder encoder =
+  private final Encoder encoder =
       in -> {
         if (!(in instanceof ClusterSerializable)) {
           throw new IOException("Unsupported type: " + in.getClass());
